# corporatetravel-dispatch-mcp

./: .gitignore  README.md  pyproject.toml
dispatch_mcp/: __init__.py  client.py  config.py  server.py
dispatch_mcp/tools/: __init__.py  acars.py  admin.py  aircraft.py  dispatch.py  fids.py  flight.py
docs/: mcpo-openwebui.md
tools/: dispatch_admin.py  dispatch_ops.py  dispatch_watchlist.py
