[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corporatetravel-dispatch-mcp"
version = "0.1.0"
description = "MCP server exposing CS Executive Services dispatch platform tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
dispatch-mcp = "dispatch_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dispatch_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
